--- a/templates/maap/0/rancher-compose.yml
+++ b/templates/maap/0/rancher-compose.yml
@@ -29,6 +29,26 @@
       type: string
       required: true
 
+
+    - variable: S3_REGION
+      label: S3 region
+      required: true
+      type: string
+    - variable: S3_ACCESS_KEY_ID
+      label: S3 access key
+      required: true
+      type: string
+    - variable: S3_SECRET_ACCESS_KEY
+      label: S3 access key
+    - variable: S3_BUCKET
+      label: S3 bucket
+      type: string
+      required: true
+    - variable: S3_PREFIX
+      label: S3 prefix for export
+      type: string
+      required: true
+
     - variable: VOLUME_APP_DATA
       label: Volume for app data
       type: string
@@ -69,6 +89,17 @@
       default: 32m
     - variable: CACHE_MEM_LIMIT
       label: Memory limit (cache process)
+      type: string
+      required: true
+      default: 64m
+
+    - variable: EXPORT_MEM_RESERVATION
+      label: Memory reservation (export process)
+      type: string
+      required: true
+      default: 32m
+    - variable: EXPORT_MEM_LIMIT
+      label: Memory limit (export process)
       type: string
       required: true
       default: 64m
