--- a/templates/maap/0/docker-compose.yml
+++ b/templates/maap/0/docker-compose.yml
@@ -3,6 +3,10 @@ version: '2'
 services:
   web: &web
     image: instedd/maap-store:${MAAP_VERSION}
+    command: 
+    - /bin/sh
+    - -c
+    - rm -f /app/tmp/pids/server.pid && bundle exec rails s -p 3000 -b "0.0.0.0"
     environment:
       DATABASE_HOST: ${DATABASE_HOST}
       DATABASE_USERNAME: ${DATABASE_USER}
