maap: don't show S3 secret key in plain text

--- a/templates/maap/0/rancher-compose.yml
+++ b/templates/maap/0/rancher-compose.yml
@@ -40,7 +40,7 @@
       type: string
     - variable: S3_SECRET_ACCESS_KEY
       label: S3 secret access key
-      type: string
+      type: password
     - variable: S3_BUCKET
       label: S3 bucket
       type: string
