ASLM: Make Sidekiq password a secret

--- a/templates/maap/0/rancher-compose.yml
+++ b/templates/maap/0/rancher-compose.yml
@@ -36,7 +36,7 @@
     - variable: SIDEKIQ_PASSWORD
       label: Sidekiq Password
       required: true
-      type: string
+      type: password
 
     - variable: S3_REGION
       label: S3 region
