--- a/templates/maap/0/docker-compose.yml
+++ b/templates/maap/0/docker-compose.yml
@@ -101,3 +101,23 @@ services:
     {{- if .Values.EXPORT_MEM_LIMIT }}
     mem_limit: ${EXPORT_MEM_LIMIT}
     {{- end}}
+
+  {{- if .Values.BACKUP_S3_BUCKET }}
+  backup:
+    image: schickling/postgres-backup-s3
+    environment:
+      SCHEDULE: '@daily'
+      S3_REGION: ${BACKUP_S3_REGION}
+      S3_ACCESS_KEY_ID: ${BACKUP_S3_ACCESS_KEY_ID}
+      S3_SECRET_ACCESS_KEY: ${BACKUP_S3_SECRET_ACCESS_KEY}
+      S3_BUCKET: ${BACKUP_S3_BUCKET}
+      S3_PREFIX: ${BACKUP_S3_PREFIX}
+      POSTGRES_DATABASE: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASS}
+      POSTGRES_HOST: ${DATABASE_HOST}
+    labels:
+      io.rancher.container.pull_image: always
+      io.rancher.scheduler.affinity:host_label: aslm-runner=true
+      aslm-runner: 'true'
+  {{- end}}
