--- a/templates/maap/0/rancher-compose.yml
+++ b/templates/maap/0/rancher-compose.yml
@@ -29,6 +29,23 @@
       type: string
       required: true
 
+    - variable: BACKUP_S3_REGION
+      label: Backups S3 region
+      type: string
+    - variable: BACKUP_S3_ACCESS_KEY_ID
+      label: Backups S3 access key
+      type: string
+    - variable: BACKUP_S3_SECRET_ACCESS_KEY
+      label: Backups S3 secret access key
+      type: password
+    - variable: BACKUP_S3_BUCKET
+      label: Backups S3 bucket
+      type: string
+      required: true
+    - variable: BACKUP_S3_PREFIX
+      label: Backups S3 prefix
+      type: string
+
     - variable: SIDEKIQ_USER
       label: Sidekiq User
       required: true
