Facility Public Portal: add Google API Key envvar

--- a/templates/facility-public-portal/2/rancher-compose.yml
+++ b/templates/facility-public-portal/2/rancher-compose.yml
@@ -100,6 +100,13 @@
       required: true
       default: 587
 
+
+    - variable: GOOGLE_SHEET_API_KEY
+      label: Google Sheets API Key
+      required: false
+      type: password
+
+
     - variable: VOLUME_DRIVER
       label: Volume Driver
       type: string
