--- a/templates/facility-public-portal/2/docker-compose.yml
+++ b/templates/facility-public-portal/2/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       ALLOWED_REQUEST_ORIGINS: ${ALLOWED_REQUEST_ORIGINS}
       FAKE_USER_POSITION: ${FAKE_USER_POSITION}
 
+      GOOGLE_SHEET_API_KEY: ${GOOGLE_SHEET_API_KEY}
+
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
 
       {{- if .Values.DEFAULT_LOCALE }}
