--- a/templates/resourcemap/0/rancher-compose.yml
+++ b/templates/resourcemap/0/rancher-compose.yml
@@ -86,7 +86,7 @@
     - variable: GOOGLE_SHEET_API_KEY
       label: Google Sheets API v4 key (for Import Wizard to work with Google Spreadsheets)
       description: Obtain from https://console.cloud.google.com/apis/library/sheets.googleapis.com
-      type: secret
+      type: password
     - variable: NEWRELIC_LICENSE_KEY
       label: New Relic License Key
       type: string
