--- a/templates/verboice/1/docker-compose.yml
+++ b/templates/verboice/1/docker-compose.yml
@@ -82,7 +82,7 @@ services:
       DB_USER: ${DATABASE_USER}
       ASTERISK_RECORD_DIR: /data/call_logs/
       BASE_URL: ${BASE_URL}
-      BROKER_HTTPD_BASE_URL: ${BASE_URL}
+      BROKER_HTTPD_BASE_URL: ${BASE_URL}/
       TWILIO_CALLBACK_URL: ${BASE_URL}/twilio
       {{- if .Values.NUNTIUM_HOST }}
       NUNTIUM_HOST: ${NUNTIUM_HOST}
