Add Aida's SENTRY_PUBLIC_DSN
Sentry deprecated private DSNs and now requires the public one

--- a/templates/aida/0/docker-compose.yml
+++ b/templates/aida/0/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       DATABASE_URL: ecto://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${RUNTIME_DATABASE_NAME}
       SENTRY_DSN: ${SENTRY_DSN}
+      SENTRY_PUBLIC_DSN: ${SENTRY_PUBLIC_DSN}
       PRIVATE_KEY: ${PRIVATE_KEY}
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
@@ -29,6 +30,7 @@ services:
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       SETTINGS__BACKEND__URL: http://runtime
       SENTRY_DSN: ${SENTRY_DSN}
+      SENTRY_PUBLIC_DSN: ${SENTRY_PUBLIC_DSN}
       SETTINGS__BACKEND__PUBLIC_SOCKET_URL: wss://${HOSTNAME}/socket
       SETTINGS__BASE_URL: https://${HOSTNAME}
       SETTINGS__SMTP_SETTINGS__USER_NAME: ${SMTP_USER}
