--- a/templates/adminer/0/docker-compose.yml
+++ b/templates/adminer/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   oauth2-proxy:
-    image: quay.io/pusher/oauth2_proxy:v5.1.0
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
     mem_reservation: 6m
     mem_limit: 16m
     command:
