Allow Adminer's Github team to be optional
So any member of an organization can access

--- a/templates/adminer/0/docker-compose.yml
+++ b/templates/adminer/0/docker-compose.yml
@@ -11,7 +11,9 @@ services:
       - --http-address=http://0.0.0.0:8080
       - --pass-basic-auth=false
       - --github-org=${GITHUB_ORG}
+      {{- if .Values.GITHUB_TEAM }}
       - --github-team=${GITHUB_TEAM}
+      {{- end }}
     environment:
       OAUTH2_PROXY_COOKIE_SECRET: ${COOKIE_SECRET}
       OAUTH2_PROXY_CLIENT_ID: ${GITHUB_CLIENT_ID}
