--- a/templates/maap/0/docker-compose.yml
+++ b/templates/maap/0/docker-compose.yml
@@ -80,7 +80,7 @@ services:
   export:
     image: matiasgarciaisaia/postgres-backup-s3:12.5
     environment:
-      SCHEDULE: '@every 1d'
+      SCHEDULE: '@every 24h'
       S3_REGION: ${S3_REGION}
       S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
       S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY}
@@ -106,7 +106,7 @@ services:
   backup:
     image: matiasgarciaisaia/postgres-backup-s3:12.5
     environment:
-      SCHEDULE: '@every 1d'
+      SCHEDULE: '@every 24h'
       S3_REGION: ${BACKUP_S3_REGION}
       S3_ACCESS_KEY_ID: ${BACKUP_S3_ACCESS_KEY_ID}
       S3_SECRET_ACCESS_KEY: ${BACKUP_S3_SECRET_ACCESS_KEY}
