Fix Verboice's broker base URL

--- a/templates/verboice/1/docker-compose.yml
+++ b/templates/verboice/1/docker-compose.yml
@@ -82,8 +82,8 @@ services:
       DB_USER: ${DATABASE_USER}
       ASTERISK_RECORD_DIR: /data/call_logs/
       BASE_URL: ${BASE_URL}
-      BROKER_HTTPD_BASE_URL: ${BASE_URL}/
-      TWILIO_CALLBACK_URL: ${BASE_URL}/twilio
+      BROKER_HTTPD_BASE_URL: ${BROKER_BASE_URL}/
+      TWILIO_CALLBACK_URL: ${BROKER_BASE_URL}/
       {{- if .Values.NUNTIUM_HOST }}
       NUNTIUM_HOST: ${NUNTIUM_HOST}
       NUNTIUM_ACCOUNT: ${NUNTIUM_ACCOUNT}
