Specify custom cluster.name for ElasticSearch
Use the stack's name as the ElasticSearch cluster name to avoid
different stacks' ElasticSearch instances join the same cluster - thus
sharing indices between them.

--- a/templates/facility-public-portal/3/docker-compose.yml
+++ b/templates/facility-public-portal/3/docker-compose.yml
@@ -85,6 +85,8 @@ services:
   {{- if eq .Values.EXTERNAL_ELASTICSEARCH "false" }}
   elasticsearch:
     image: elasticsearch:2.4
+    environment:
+      ES_JAVA_OPTS: -Des.cluster.name={{ .Stack.Name }}
     volumes:
       - ${VOLUME_ES_DATA}:/usr/share/elasticsearch/data
     {{- if .Values.ES_MEM_LIMIT }}
