Surveda: avoid URL shortener if not used
Setting an empty URL_SHORTENER_API_KEY variable enables the URL
shortener with an empty key - which usually fails.

--- a/templates/surveda/0/docker-compose.yml
+++ b/templates/surveda/0/docker-compose.yml
@@ -35,7 +35,9 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       EMAIL_FROM_EMAIL: ${EMAIL_FROM_EMAIL}
       EMAIL_FROM_NAME: ${EMAIL_FROM_NAME}
+      {{- if .Values.URL_SHORTENER_API_KEY }}
       URL_SHORTENER_API_KEY: ${URL_SHORTENER_API_KEY}
+      {{- if .Values.URL_SHORTENER_API_KEY }}
       {{- if .Values.URL_SHORTENER_SERVICE }}
       URL_SHORTENER_SERVICE: ${URL_SHORTENER_SERVICE}
       {{- end }}
