Fix: Surveda template bug in URL_SHORTENER_API_KEY
The template was bugous since it added two if's instead of an if with
it's end

--- a/templates/surveda/1/docker-compose.yml
+++ b/templates/surveda/1/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       EMAIL_FROM_NAME: ${EMAIL_FROM_NAME}
       {{- if .Values.URL_SHORTENER_API_KEY }}
       URL_SHORTENER_API_KEY: ${URL_SHORTENER_API_KEY}
-      {{- if .Values.URL_SHORTENER_API_KEY }}
+      {{- end }}
       {{- if .Values.URL_SHORTENER_SERVICE }}
       URL_SHORTENER_SERVICE: ${URL_SHORTENER_SERVICE}
       {{- end }}
