--- a/templates/surveda/0/docker-compose.yml
+++ b/templates/surveda/0/docker-compose.yml
@@ -37,9 +37,9 @@ services:
       EMAIL_FROM_NAME: ${EMAIL_FROM_NAME}
       {{- if .Values.URL_SHORTENER_API_KEY }}
       URL_SHORTENER_API_KEY: ${URL_SHORTENER_API_KEY}
-      {{- if .Values.URL_SHORTENER_API_KEY }}
       {{- if .Values.URL_SHORTENER_SERVICE }}
       URL_SHORTENER_SERVICE: ${URL_SHORTENER_SERVICE}
+      {{- end }}
       {{- end }}
       {{- if .Values.MOBILE_WEB_BASE_URL }}
       MOBILE_WEB_BASE_URL: ${MOBILE_WEB_BASE_URL}
