--- a/infra-templates/logging/0/docker-compose.yml
+++ b/infra-templates/logging/0/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       io.rancher.container.pull_image: always
       io.rancher.scheduler.global: 'true'
   oauth2-proxy:
-    image: quay.io/pusher/oauth2_proxy:v5.1.0
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
     mem_reservation: 6m
     mem_limit: 16m
     environment:
@@ -38,7 +38,10 @@ services:
     - --http-address=http://0.0.0.0:8080
     - --pass-basic-auth=false
     - --github-org=${OAUTH2_PROXY_GITHUB_ORG}
+    {{- if .Values.OAUTH2_PROXY_GITHUB_TEAM }}
     - --github-team=${OAUTH2_PROXY_GITHUB_TEAM}
+    {{- end }}
+    - --scope="user:email"
     labels:
       io.rancher.container.pull_image: always
       logging-proxy: {{ .Stack.Name }}
