--- a/templates/adminer/0/docker-compose.yml
+++ b/templates/adminer/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   oauth2-proxy:
-    image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
     mem_reservation: 6m
     mem_limit: 16m
     command:
@@ -14,6 +14,7 @@ services:
       {{- if .Values.GITHUB_TEAM }}
       - --github-team=${GITHUB_TEAM}
       {{- end }}
+      - --scope="user:email"
     environment:
       OAUTH2_PROXY_COOKIE_SECRET: ${COOKIE_SECRET}
       OAUTH2_PROXY_CLIENT_ID: ${GITHUB_CLIENT_ID}
