Fix oauth2_proxy scope escaping
Fixes 7ef52244a21f082c18c9c1b5b09d95efb332c9fc

--- a/infra-templates/logging/0/docker-compose.yml
+++ b/infra-templates/logging/0/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     {{- if .Values.OAUTH2_PROXY_GITHUB_TEAM }}
     - --github-team=${OAUTH2_PROXY_GITHUB_TEAM}
     {{- end }}
-    - --scope="user:email"
+    - --scope=user:email
     labels:
       io.rancher.container.pull_image: always
       logging-proxy: {{ .Stack.Name }}
