--- a/infra-templates/logging/0/docker-compose.yml
+++ b/infra-templates/logging/0/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       OAUTH2_PROXY_CLIENT_ID: ${OAUTH2_PROXY_CLIENT_ID}
       OAUTH2_PROXY_CLIENT_SECRET: ${OAUTH2_PROXY_CLIENT_SECRET}
       OAUTH2_PROXY_COOKIE_SECRET: ${OAUTH2_PROXY_COOKIE_SECRET}
+      OAUTH2_PROXY_SCOPE: "user:email"
     command:
     - --provider=github
     - --email-domain=*
@@ -41,7 +42,6 @@ services:
     {{- if .Values.OAUTH2_PROXY_GITHUB_TEAM }}
     - --github-team=${OAUTH2_PROXY_GITHUB_TEAM}
     {{- end }}
-    - --scope=user\:email
     labels:
       io.rancher.container.pull_image: always
       logging-proxy: {{ .Stack.Name }}
