--- a/templates/adminer/0/docker-compose.yml
+++ b/templates/adminer/0/docker-compose.yml
@@ -14,11 +14,11 @@ services:
       {{- if .Values.GITHUB_TEAM }}
       - --github-team=${GITHUB_TEAM}
       {{- end }}
-      - --scope=user:email
     environment:
       OAUTH2_PROXY_COOKIE_SECRET: ${COOKIE_SECRET}
       OAUTH2_PROXY_CLIENT_ID: ${GITHUB_CLIENT_ID}
       OAUTH2_PROXY_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET}
+      OAUTH2_PROXY_SCOPE: "user:email"
     labels:
       io.rancher.container.pull_image: always
   adminer:
