--- a/templates/maap/0/docker-compose.yml
+++ b/templates/maap/0/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       io.rancher.container.start_once: 'true'
 
   cache:
-    image: redis
+    image: redis:7.0.9
     volumes:
       - ${VOLUME_CACHE_DATA}:/data
     labels:
